[package]
name = "mebayu_be"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "migrate"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
async-trait = "0.1.89"
redis = { version = "1.0.3", features = ["tokio-comp", "json"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
validator = { version = "0.20.0", features = ["derive"] }
serde_path_to_error = "0.1.20"
jsonwebtoken = "10.3.0"
bcrypt = "0.18.0"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
